# cargo-installed

./: Cargo.toml  README.md
.github/workflows/: build-and-release.yaml  test.yaml
src/: args.rs  crates.rs  main.rs
