[package]
authors = ["lightning1141@gmail.com"]
categories = ["development-tools::cargo-plugins"]
description = "Easy manage programs installed by `cargo install`."
documentation = "https://github.com/light4/cargo-installed"
keywords = ["cargo", "installed", "subcommand"]
license = "Apache-2.0/MIT"
name = "cargo-installed"
repository = "https://github.com/light4/cargo-installed"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.3", default-features = false, features = [
    "std",
    "help",
    "usage",
    "derive",
    "error-context",
] }
colored = "2.0.0"
json = "0.12"
semver = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = "2.6"
xshell = "0.2"

[profile.release]
lto = "thin"
codegen-units = 4
strip = "debuginfo"
